<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/settings_video">
        <ListPreference app:defaultValue="FOUR_BY_THREE" app:entries="@array/aspect_entries" app:entryValues="@array/aspect_values" app:key="video.aspect" app:title="@string/aspect_mode" app:useSimpleSummaryProvider="true" />
        <ListPreference app:defaultValue="HQ4X" app:entries="@array/filter_entries" app:entryValues="@array/filter_values" app:key="video.filter" app:title="@string/filter_mode" app:useSimpleSummaryProvider="true" />
        <ListPreference app:defaultValue="AUTO" app:entries="@array/refresh_entries" app:entryValues="@array/refresh_values" app:key="video.refresh" app:title="@string/refresh_rate" app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/settings_controls">
        <Preference app:key="controls.layout_editor" app:summary="@string/control_layout_summary" app:title="@string/control_layout_title" />
        <ListPreference app:defaultValue="LIGHT" app:entries="@array/haptic_entries" app:entryValues="@array/haptic_values" app:key="controls.haptic_level" app:title="@string/haptic_level" app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat app:defaultValue="true" app:key="controls.distinct_ab" app:summary="@string/distinct_ab_summary" app:title="@string/distinct_ab_haptics" />
        <Preference app:key="controls.reset" app:summary="@string/reset_controls_summary" app:title="@string/reset_controls" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/settings_audio">
        <SwitchPreferenceCompat app:defaultValue="true" app:key="audio.enabled" app:title="@string/audio_enabled" />
        <ListPreference app:defaultValue="PAUSE" app:entries="@array/audio_focus_entries" app:entryValues="@array/audio_focus_values" app:key="audio.focus_policy" app:title="@string/audio_focus" app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/settings_general">
        <ListPreference app:defaultValue="system" app:entries="@array/language_entries" app:entryValues="@array/language_values" app:key="general.locale" app:title="@string/app_language" app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat app:defaultValue="true" app:key="general.autosave" app:summary="@string/autosave_summary" app:title="@string/autosave" />
        <Preference app:key="general.library" app:title="@string/manage_library" />
        <Preference app:key="general.licenses" app:title="@string/license_information" />
    </PreferenceCategory>
</PreferenceScreen>
